task1/test_results_defects/infer_test/wrong_arguments_func_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/wrong_arguments_func_pointer.c:224: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 220 by call to `malloc`, is not freed after the last access at line 224, column 2.
  222. 	char (*func)(char ,char , int *);
  223. 	func = (char (*)(char ,char,int*))wrong_arguments_func_pointer_009_func_001;
  224. 	ret = func(*str1,*str2,str3);/*Tool should detect this line as error*//*ERROR:Wrong arguments passed to a function pointer*/
        ^
  225. 
  226. }

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/wrong_arguments_func_pointer.c:356: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 348 by call to `malloc`, is not freed after the last access at line 356, column 2.
  354. 	void (*fptr1)(wrong_arguments_func_pointer_012_s_001,wrong_arguments_func_pointer_012_s_001 *);
  355. 	fptr1 = wrong_arguments_func_pointer_012_func_002;
  356. 	fptr1(st,st1);
        ^
  357. 	void (*fptr2)(wrong_arguments_func_pointer_012_s_001 *,int);
  358. 	fptr2 = wrong_arguments_func_pointer_012_func_003;

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/wrong_arguments_func_pointer.c:599: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 591 by call to `malloc`, is not freed after the last access at line 599, column 2.
  597. 	void (*fptr3)(wrong_arguments_func_pointer_018_s_001 st,wrong_arguments_func_pointer_018_s_001* st1);
  598. 	fptr3 = wrong_arguments_func_pointer_018_func_004;
  599. 	fptr3(st,st1);
        ^
  600. }
  601. 

Found 3 issues
  Issue Type(ISSUED_TYPE_ID): #
    Memory Leak(MEMORY_LEAK): 3
